SportManager/force-app/main/default/objects/Partido__c/Partido__c.object-meta.xml
<CustomObject>
    <label>Partido</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Partido Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>