SportManager/force-app/main/default/objects/Partido__c/fields/Club_1__c.field-meta.xml
<CustomField>
    <fullName>Club_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club 1</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Partidos</relationshipLabel>
    <relationshipName>Partidos</relationshipName>
    <type>Lookup</type>
</CustomField>