SportManager/force-app/main/default/objects/Partido__c/fields/Club_2__c.field-meta.xml
<CustomField>
    <fullName>Club_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Club 2</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Partidos (Club 2)</relationshipLabel>
    <relationshipName>Partidos1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>