SportManager/force-app/main/default/objects/Partido__c/fields/Estadio__c.field-meta.xml
<CustomField>
    <fullName>Estadio__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Estadio</label>
    <referenceTo>Estadio__c</referenceTo>
    <relationshipLabel>Partidos</relationshipLabel>
    <relationshipName>Partidos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>