SportManager/force-app/main/default/objects/Partido__c/fields/Hora__c.field-meta.xml
<CustomField>
    <fullName>Hora__c</fullName>
    <label>Hora</label>
    <required>true</required>
    <type>Time</type>
</CustomField>